--- a/ms-discovery/src/main/resources/application.yml
+++ b/ms-discovery/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   application:
-    name: ms-discovery
+    name: msdiscovery
   
   security:
     user:
-      name: dev-user
-      password: dev-pass
+      name: user
+      password: password
 
 server:
   port: 8761
