--- a/ms-accommodation/src/main/resources/application.yml
+++ b/ms-accommodation/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: msaccommodation
+    name: ms-accommodation
   datasource:
     url: jdbc:h2:mem:testdb
     username: dev
