alterando o instance-id do gateway

--- a/ms-gateway/src/main/resources/application.yml
+++ b/ms-gateway/src/main/resources/application.yml
@@ -26,3 +26,5 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://user:password@localhost:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${server.address:${random.value}}
